Ensure that canvas container slides out of screen after a round.

--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -60,10 +60,10 @@ br {
   cursor: pointer;
 }
 
-@keyframes slide-down {
-  0% { transform: translateY(0%); }
-  80% { transform: translateY(0%); }
-  100% { transform: translateY(100%); }
+@keyframes slide-out-of-screen {
+  0% { transform: translateY(0vh); }
+  80% { transform: translateY(0vh); }
+  100% { transform: translateY(100vh); }
 }
 
 @keyframes spin {
@@ -161,6 +161,6 @@ br {
 }
 
 .game-over #game-component {
-  animation: slide-down 2.5s ease-out;
+  animation: slide-out-of-screen 2.5s ease-out;
   animation-fill-mode: forwards;
 }
